feat{properties}: criação do arquivo de configuração do banco de dados PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url= jdbc:postgresql://localhost:5432/stocka-db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+logging.level.com.ms.email= TRACE
+#logging.level.root= DEBUG
