--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/stocka-db
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url= postgresql://postgres:Rn6OmFSK1EDpbjg0dZdz@containers-us-west-8.railway.app:7103/railway
+# spring.datasource.username=postgres
+# spring.datasource.password=Rn6OmFSK1EDpbjg0dZdz
+# spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
-logging.level.com.ms.email= TRACE
+# logging.level.com.ms.email= TRACE
 #logging.level.root= DEBUG
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=postgresql://postgres:Rn6OmFSK1EDpbjg0dZdz@containers-us-west-8.railway.app:7103/railway
+spring.datasource.username=postgres
+spring.datasource.password=Rn6OmFSK1EDpbjg0dZdz
+
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
